Fix album title layout being broken on tablet layout in compact mode
The solution is to not try to utilize the whole screen width for the
album title in case the tablet layout is being used. This may
unnecessarily truncate the album name but at least the layout doesn't
look broken.

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -9,14 +9,14 @@
  * @author Pauli Järvinen <pauli.jarvinen@gmail.com>
  * @copyright Morris Jobke 2013, 2014
  * @copyright Jan-Christoph Borchardt 2014
- * @copyright Pauli Järvinen 2016 - 2019
+ * @copyright Pauli Järvinen 2016 - 2021
  */
 
 .tablet .album-area {
 	width: 100%;
 }
 
-.tablet .album-area > h2 {
+.tablet #albums:not(.compact) .album-area > h2 {
 	white-space: normal;
 	max-width: unset;
 }
